[package]
name = "unfair-advantage"
description = "A Bevy Game Jam #1 game!"
version = "0.0.0"
authors = ["Matthew Martelle"]
homepage = "https://mcmartelle.github.io/"
repository = "https://github.com/Mcmartelle/unfair-advantage"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
# bevy = { version = "0.6", default-features = false}
bevy = { version = "0.6", default-features = true }
heron = { version = "2.0.1", features = ["2d"] }
bevy_kira_audio = "0.8.0"

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.6", default-features = false}


[lib]
name = "unfair_advantage_lib"
path = "src/lib.rs"

[[bin]]
name = "unfair_advantage_bin"
path = "src/main.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false
